--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bulma": "^0.7.1",
+    "eslint-plugin-react": "^7.9.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
     "node-sass": "^4.9.0",
