--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "seed": "node db/seeds",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "heroku-postbuild": "yarn install --only=dev --no-shrinkwrap && yarn build",
+    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build",
   },
   "dependencies": {
     "axios": "^0.18.0",
